# framework_mcu_expansion_card

./: .gitmodules  Cargo.toml  LICENSE-APACHE
.cargo/: config.toml
framework_mcu_expansion_card_bsp/: Cargo.toml  README.md  memory.x
framework_mcu_expansion_card_bsp/src/: lib.rs
framework_mcu_expansion_card_fw/: Cargo.toml  memory.x
framework_mcu_expansion_card_fw/src/: main.rs
linux_kernel_driver/: Makefile  fw_mcu_usb.c
